Fixed many many bugs with the menu, tags, spacing, blockquotes

--- a/new.css
+++ b/new.css
@@ -131,7 +131,8 @@ body {
 /* Typography
 –––––––––––––––––––––––––––––––––––––––––––––––––– */
 h1, h2, h3, h4, h5, h6 {
-    margin-top: 0;
+    margin-top: -0.5rem;
+    padding-top: 1rem;
     margin-bottom: 2rem;
     font-weight: 300; }
 h1 { font-size: 4.0rem; line-height: 1.2;  letter-spacing: -.1rem;}
@@ -422,6 +423,13 @@ body {
     background-color: #fff;
 }
 
+blockquote {
+    border-left: 2px solid #ccc;
+    padding: 0 2rem;
+    margin: 0 0 2.5rem 0;
+    color: #666;
+}
+
 nav {
     background-color: #f6f6f6;
     padding: 1rem 1.5rem;
@@ -496,6 +504,8 @@ img, .table-wrapper {
 body {
     overflow-x: hidden;
     overflow-y: scroll;
+    -webkit-overflow-scrolling: touch;
+    scroll-behavior: smooth;
 }
 
 ::-webkit-scrollbar * {
